--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     ],
     "require-dev": {
         "phpunit/phpunit": "^6.3"
+    },
+    "autoload": {
+        "psr-4": { "SehrGut\\WpPricesWithEuVat\\": "." }
     }
 }
