--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         }
     ],
     "require-dev": {
-        "phpunit/phpunit": "^6.3"
+        "phpunit/phpunit": "^6.3",
+        "mockery/mockery": "^0.9.9"
     },
     "autoload": {
         "psr-4": { "SehrGut\\WpPricesWithEuVat\\": "." }
