--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "sehrgut/wp-prices-with-eu-vat",
+    "name": "sehrgut/wp-eu-vat-helpers",
     "description": "A WordPress helper shortcode to display prices including applicable VAT rate for the user's location (based on IP address)",
     "type": "wordpress-plugin",
     "require": {
@@ -17,6 +17,6 @@
         "mockery/mockery": "^0.9.9"
     },
     "autoload": {
-        "psr-4": { "SehrGut\\WpPricesWithEuVat\\": "." }
+        "psr-4": { "SehrGut\\WpEuVatHelpers\\": "." }
     }
 }
