--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: php
+
 php:
   - '7.1'
   - '7.2'
+
 install:
   - composer install --prefer-dist --dev
+
 script:
-  - vendor/bin/phpunit
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
