--- a/composer.json
+++ b/composer.json
@@ -18,5 +18,8 @@
     },
     "autoload": {
         "psr-4": { "SehrGut\\WpEuVatHelpers\\": "." }
+    },
+    "scripts": {
+        "test": ["vendor/bin/phpunit"]
     }
 }
