--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,38 @@
 language: php
 
 php:
-  - '7.1'
-  - '7.2'
+  - 5.6
+  - 7.1
+  - 7.2
+
+env:
+  - WP_VERSION=latest WP_MULTISITE=0
+  - WP_VERSION=4.8 WP_MULTISITE=0
+  - WP_VERSION=4.9 WP_MULTISITE=0
+
+matrix:
+  include:
+    - php: 7.2
+      env: WP_VERSION=latest WP_MULTISITE=1
 
 install:
-  - composer install --prefer-dist --dev
+  - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - export PATH="$HOME/.composer/vendor/bin:$PATH"
+  - |
+    if [[ ${TRAVIS_PHP_VERSION:0:1} == "7" ]]; then
+      composer global require "phpunit/phpunit=5.6.*"
+    else
+      composer global require "phpunit/phpunit=4.8.*"
+    fi
+  - |
+    composer global require wp-coding-standards/wpcs
+    phpcs --config-set installed_paths $HOME/.composer/vendor/wp-coding-standards/wpcs
 
 script:
-  - vendor/bin/phpunit --coverage-clover=coverage.xml
+  - phpcs --standard=phpcs.ruleset.xml $(find . -name '*.php')
+  - composer unit
+  - composer integration
+
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
