--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "psr-4": { "SehrGut\\WpEuVatHelpers\\": "." }
     },
     "scripts": {
-        "test": ["vendor/bin/phpunit"]
+        "unit": ["vendor/bin/phpunit --coverage-clover=coverage.xml"],
+        "integration": ["vendor/bin/phpunit --config phpunit.integration.xml --coverage-clover=coverage.xml"]
     }
 }
