--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -10,8 +10,8 @@
          stopOnFailure="true"
          syntaxCheck="false">
     <testsuites>
-        <testsuite name="Test Suite">
-            <directory>tests/</directory>
+        <testsuite name="Unit Tests">
+            <directory>tests/unit</directory>
         </testsuite>
     </testsuites>
     <filter>
