--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ matrix:
 
 install:
   - bash bin/install-wp-tests.sh wordpress_test root '' localhost $WP_VERSION
+  - composer install --no-dev
   - composer global require mockery/mockery
   - export PATH="$HOME/.composer/vendor/bin:$PATH"
   - |
