--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,9 @@ php:
 
 env:
   - WP_VERSION=latest WP_MULTISITE=0
+  # - WP_VERSION=4.9 WP_MULTISITE=0
   - WP_VERSION=4.8 WP_MULTISITE=0
-  - WP_VERSION=4.9 WP_MULTISITE=0
+  - WP_VERSION=4.7 WP_MULTISITE=0
 
 matrix:
   include:
